<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#21232D"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/Task1"
        android:textAlignment="center"
        android:textColor="#A880AF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/rad_degree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.759" />

    <android.widget.Button
        android:id="@+id/rad_degree"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="340dp"
        android:accessibilityLiveRegion="none"
        android:background="@drawable/buttonshape"
        android:checkable="false"
        android:clickable="true"
        android:text="@string/ERC"
        android:onClick="launchSecondActivity"
        android:textAllCaps="false"
        android:textColor="#21232D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#00BCD4"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <android.widget.Button
        android:id="@+id/conversions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:text="@string/conversions"
        android:onClick="launchThirdActivity"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/impedance_calculator" />

    <android.widget.Button
        android:id="@+id/impedance_calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:text="@string/impedance_calculator"
        android:onClick="launchFourthActivity"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/volume_calculator" />

    <android.widget.Button
        android:id="@+id/volume_calculator"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:accessibilityLiveRegion="none"
        android:background="@drawable/buttonshape"
        android:checkable="false"
        android:clickable="true"
        android:text="@string/volume_calculator"
        android:onClick="launchFifthActivity"
        android:textAllCaps="false"
        android:textColor="#21232D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#00BCD4"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rad_degree"
        android:focusable="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/Hello1"
        android:textAlignment="center"
        android:textColor="#A880AF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/rad_degree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.236" />

</androidx.constraintlayout.widget.ConstraintLayout>