<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#21232D"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FifthActivity">


    <android.widget.Button
        android:id="@+id/cube"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="340dp"
        android:accessibilityLiveRegion="none"
        android:background="@drawable/buttonshape"
        android:checkable="false"
        android:clickable="true"
        android:focusable="true"
        android:onClick="launchCubeVolumeActivity"
        android:text="@string/cube"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#21232D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#00BCD4"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/cuboid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:onClick="launchCuboidVolumeActivity"
        android:text="@string/cuboid"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pyramid" />

    <android.widget.Button
        android:id="@+id/pyramid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttonshape"
        android:onClick="launchPyramidVolumeActivity"
        android:text="@string/pyramid"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prism" />

    <android.widget.Button
        android:id="@+id/prism"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:accessibilityLiveRegion="none"
        android:background="@drawable/buttonshape"
        android:checkable="false"
        android:clickable="true"
        android:focusable="true"
        android:onClick="launchPrismVolumeActivity"
        android:text="@string/prism"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#21232D"
        android:textColorHint="#FFFFFF"
        android:textColorLink="#00BCD4"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cube" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/please_choose_an_object"
        android:textAlignment="center"
        android:textColor="#A880AF"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/cube"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.492" />

</androidx.constraintlayout.widget.ConstraintLayout>